--- a/src/iOS/StudyBuddy/StudyBuddy/Base.lproj/Main.storyboard
+++ b/src/iOS/StudyBuddy/StudyBuddy/Base.lproj/Main.storyboard
@@ -369,11 +369,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fbt-u0-1n1" customClass="CreateGroupSecondVCContainerView" customModule="StudyBuddy" customModuleProvider="target">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fbt-u0-1n1">
                                 <rect key="frame" x="0.0" y="64" width="375" height="539"/>
                                 <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <segue destination="Kwf-Ap-fqn" kind="embed" id="Hqs-wn-llO"/>
+                                    <segue destination="Kwf-Ap-fqn" kind="embed" identifier="EmbedChildViewControllerSegue" id="Hqs-wn-llO"/>
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mJP-eY-38h">
@@ -485,6 +485,7 @@
                         </connections>
                     </tableView>
                     <connections>
+                        <outlet property="locationDescriptionTF" destination="KSm-nn-99S" id="zkM-3w-thK"/>
                         <outlet property="mapContainerView" destination="Kn4-LY-8CV" id="Pxh-va-RgS"/>
                     </connections>
                 </tableViewController>
@@ -504,7 +505,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="539"/>
                                 <color key="backgroundColor" red="0.1176470588" green="0.1176470588" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
-                                    <segue destination="7rP-h5-FhJ" kind="embed" id="IEs-LU-riG"/>
+                                    <segue destination="7rP-h5-FhJ" kind="embed" identifier="EmbedChildViewControllerSegue" id="IEs-LU-riG"/>
                                 </connections>
                             </containerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YzV-Jr-HKR">
@@ -518,6 +519,7 @@
                                     <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.27450980390000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="doneButtonPressed:" destination="eQ6-4R-tlf" eventType="touchUpInside" id="VHf-tI-7aF"/>
                                     <action selector="donePressed:" destination="91e-R1-yUu" eventType="touchUpInside" id="nRP-2a-4Jg"/>
                                     <action selector="nextPressed:" destination="vie-37-Bgn" eventType="touchUpInside" id="MZc-Bd-JlR"/>
                                     <action selector="nextPressed:" destination="iIf-Wd-aRb" eventType="touchUpInside" id="jl3-UV-uRo"/>
@@ -539,6 +541,7 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="33B-8y-GtE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="eQ6-4R-tlf" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="5480.8000000000002" y="807.34632683658174"/>
         </scene>
